<resources>
    <string name="app_name">Mosambee</string>
    <string name="term_condition_url">W3HR1dLBPCxPPg4j12gM8ofQMDSVvOiv0gu31VgngSJAXbuHwSQf8RNq8uH4rnI/</string>
    <string name="apiPassword">HrtllW5+/EqrqrO9+06gZ7eCyd0eTtVmlxuW78SZ7d0=</string>
    <string name="fetchwalletURL">W3HR1dLBPCxPPg4j12gM8iJdcRosXR1FpLzE8sijIrC7Tp9c4nxTHLSEjmAeJ5nRNCJzs5m1y103op4ED3ksow==</string>
    <string name="partnerId">P126195</string>
    <string name="customer_mob_no1">Enter Mobile Number</string>
    <string name="password">Password</string>
    <string name="touch_to_pay">Touch-to-Pay</string>
    <string name="enter_pswd">Enter your Password</string>
    <string name="signin">Sign In</string>
    <string name="my_profile">My Profile</string>
    <string name="user">User number</string>
    <string name="pswd">Password</string>
    <string name="tc">Terms and Conditions</string>
    <string name="rememberme">Remember Me.</string>
    <string name="ref_no">Transaction ID</string>
    <string name="payment_amt">Payment Amount</string>
    <string name="paid_to">Paid To</string>
    <string name="paid_by">Paid By</string>
    <string name="new_payment">New Transaction</string>
    <string name="trans_hist">Transaction History</string>
    <string name="change_password">Change Password</string>
    <string name="customer_otp_password">Enter the Otp</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="double_zero">00</string>
    <string name="delete">X</string>
    <string name="reset_pin">RESET PIN</string>
    <string name="logout">LOGOUT</string>
    <string name="done">Done</string>
    <string name="charge1">CHARGE</string>
    <string name="getOTP">GET OTP</string>
    <string name="sendLink">SEND LINK</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hint_upiId">VPA</string>
    <string name="hint_TxnId">Transaction ID</string>
    <string name="activity_sale">SALE</string>
    <string name="activity_preAuth">PREAUTH</string>
    <string name="activity_sale_complete">SALE COMPLETE</string>
    <string name="activity_void">VOID</string>
    <string name="activity_cbwp">CBWP</string>
    <string name="activity_pwcb">PWCB</string>
    <string name="activity_wallet">WALLET</string>
    <string name="activity_getotp">GET OTP</string>
    <string name="activity_sale_tip">SALE + TIP</string>
    <string name="activity_debitwallet">DEBIT WALLET</string>
    <string name="upi">UPI</string>
    <string name="activity_refund">REFUND</string>
    <string name="activity_pay_by_link">Pay By Link</string>
    <string name="activity_wallet_history">WALLET HISTORY</string>
    <string name="activity_settlement">SETTLEMENT</string>
    <string name="activity_tip">TIP</string>
    <string name="activity_history">HISTORY</string>
    <string name="activity_bharat_QR">BHARAT QR</string>
    <string name="activity_bharat_QR_REVERSE">BHARAT QR REVERSE</string>
    <string name="activity_non_card_txn">NON CARD TRANSACTION</string>
    <string name="activity_pay_by_link_history">PAY BY LINK HISTORY</string>
    <string name="activity_cash">CASH</string>
    <string name="activity_cheque">CHEQUE/COUPON</string>
    <string name="activity_void_list">VOID_LIST</string>
    <string name="activity_receipt">RECEIPT</string>
    <string name="activity_capature_signature">CAPTURE_SIGNATURE</string>
    <string name="activity_lead_capture">LEAD_CAPTURE</string>
    <string name="activity_about">ABOUT</string>
    <string name="activity_EMI">EMI</string>
    <string name="activity_BHARAT_QR">Bharat QR</string>
    <string name="activity_ADHAR">ADHAR</string>
    <string name="activity_SPOC">SPOC/CPOC Diagnosis</string>
    <string name="activity_UPI_COLLECT">UPI Collect</string>
    <string name="activity_UPI_CHECK">UPI Check</string>
    <string name="activity_UPI_TXN_STATUS">UPI Transaction Status</string>
    <string name="activity_UPI_TXN_HISTORY">UPI Transactions</string>
    <string name="activity_UPI_TXN_REFUND">UPI Refund</string>
    <string name="activity_UPI_PAY_BY_LINK">UPI PayByLink</string>
    <string name="activity_contact_us">CONTACT US</string>
    <string name="activity_fetch_tpsa_list">TPSA_LIST</string>
    <string name="cash_cheque">CASH_CHEQUE</string>
    <string name="show">SHOW DETAILS</string>
    <string name="cbwp">Cash@Pos</string>
    <string name="smspay">SMS Pay</string>
    <string name="re_rnter_new_pswd">Re-enter New password</string>
    <string name="fnm">First Name</string>
    <string name="lnm">Last Name</string>
    <string name="new_pswd">Enter Password</string>
    <string name="customer_email_id">Customer EmailId</string>
    <string name="current_pswd">Please enter your Current Password</string>
    <string name="supportMobileNo">022 62280555</string>
    <string name="supportMobileNo1">Call us : 022 62280555</string>
    <string name="supportMobileNo2">Help Desk : 022 62280555</string>
    <string name="supportEmailId">support@mosambee.in</string>
    <string name="txt">Dear customer, you have elected to make the following payment.</string>
    <string name="auto_lock_time">180</string>
    <string name="session_time_out">3600</string>
    <string name="Rs">\u20B9</string>
    <string name="Doller">\u0024</string>
    <string name="otp">Please enter your PIN secretly</string>
    <string name="verifying">Verifying</string>
    <string name="user_pin">Choose your four digit PIN</string>
    <string name="confirm_pin">Confirm your four digit PIN</string>
    <string name="login_pin">Please login with your new PIN</string>
    <string name="slide_menu_sale">Sale</string>
    <string name="slide_menu_debit_sale">Debit Sale</string>
    <string name="slide_menu_preauth">Pre-Auth</string>
    <string name="slide_menu_sale_complete">Sale Complete</string>
    <string name="slide_menu_void">Void</string>
    <string name="slide_menu_refund">Refund</string>
    <string name="slide_menu_pay_by_link">Pay By Link</string>
    <string name="slide_menu_settlement">Settlement</string>
    <string name="slide_menu_footer">Menu</string>
    <string name="slide_menu_history">Transaction History</string>
    <string name="slide_menu_wallet_history">Wallet History</string>
    <string name="slide_menu_non_card_history">Non card Transaction</string>
    <string name="slide_menu_pay_by_link_history">Pay By Link History</string>
    <string name="slide_menu_logout">Logout</string>
    <string name="slide_menu_cash">Cash Collection</string>
    <string name="slide_menu_cheque">Cheque/Coupon Collection</string>
    <string name="slide_menu_cash_cashback">Cash at POS(CBWP)</string>
    <string name="slide_menu_sale_cashback">Sale + Cashback(PWCB)</string>
    <string name="slide_menu_about">About</string>
    <string name="slide_menu_language">Language</string>
    <string name="English">English</string>
    <string name="Arabic">العربية</string>
    <string name="select_language">Select Language</string>
    <string name="key_injection">Key Injection</string>
    <string name="tmk_download">TMK Download</string>
    <string name="logon">Terminal Logon</string>
    <string name="initialization">Initialization </string>
    <string name="slide_menu_transcation_type">Transaction Type</string>
    <string name="slide_menu_recent_activity">Recent Activity</string>
    <string name="menu">Menu</string>
    <string name="activity_GET_QR_CODE">Get QR Code</string>
    <string name="slide_menu_upi_menu">UPI TRANSACTION</string>
    <string name="slide_menu_upi_check">Check VPA</string>
    <string name="slide_menu_upi_pay">UPI Pay</string>
    <string name="slide_menu_upi_history">UPI History</string>
    <string name="slide_menu_upi_refund">UPI Refund</string>
    <string name="title_gps_settings">GPS Settings</string>
    <string name="title_mosambee">Mosambee</string>
    <string name="settings">Settings</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_decline">Decline</string>
    <string name="closed">Close</string>
    <string name="enable_gps">Please enable GPS to proceed. Do you wish to go to Settings menu?</string>
    <string name="title_network_settings">Network Settings</string>
    <string name="title_alert">ALERT !</string>
    <string name="enable_network">Please enable internet to proceed. Do you wish to go to Settings menu?</string>
    <string name="device_not_registered">Device is not registered with us please contact Mosambee.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="saving">Saving</string>
    <string name="checking">Checking</string>
    <string name="current">Current</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_email">Send Email</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="title_reset_pin">Reset PIN</string>
    <string name="title_email">Email</string>
    <string name="title_sms">SMS</string>
    <string name="title_void">Void</string>
    <string name="hint_email">Email address</string>
    <string name="hint_mobile_no">Customer Mobile Number</string>
    <string name="hint_reset_pin">Registered mobile no.</string>
    <string name="hint_void">Approval code</string>
    <string name="wait">Please wait&#8230;</string>
    <string name="initializing">Initialization may take few minutes. Please be patient&#8230;</string>
    <string name="processing">Processing&#8230;</string>
    <string name="settling">Settling&#8230;</string>
    <string name="generating_receipt">Generating receipt&#8230;</string>
    <string name="transaction_progress">Transaction in progress&#8230;</string>
    <string name="request_pin">Requesting pin&#8230;</string>
    <string name="sending_email">Sending Email&#8230;</string>
    <string name="sending_sms">Sending SMS&#8230;</string>
    <string name="fetching_void_list">Fetching void list&#8230;</string>
    <string name="fetching_sale_complete_list">Fetching sale complete list&#8230;</string>
    <string name="fetching_history_list">Fetching history&#8230;</string>
    <string name="password_sent">Your password has been sent.</string>
    <string name="please_sign">Please sign to continue.</string>
    <string name="check_connection">Please check your internet connection.</string>
    <string name="please_sign_again">Please sign again. We apologize for your inconvenience.</string>
    <string name="mosambee_device">Please plug-in a mosambee device.</string>
    <string name="phone_no_invalid">Please enter valid mobile number.</string>
    <string name="email_invalid">Please enter valid Email address.</string>
    <string name="invalid_pin_format">"PIN is too easy.\nSame PIN,\nSequence PIN,\n Same pair of PIN are not allowed!"</string>
    <string name="email_not_delivered">Sorry&#44;Email not delivered.</string>
    <string name="retrival_reference_no">RRN</string>
    <string name="sale_complete">Sale Complete</string>
    <string name="cash">Cash</string>
    <string name="chequE">Cheque</string>
    <string name="PWCB">PWCB</string>
    <string name="choose_cardType">choose_card_type</string>
    <string name="txn_date">Transaction Date</string>
    <string name="appr_code">Approval code</string>
    <string name="txn_amount">Transaction Amount</string>
    <string name="sequence_number">Sequence Number</string>
    <string name="upi_merchant_id">UPI Merchant Id</string>
    <string name="order_id">Order Id</string>
</resources>