<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/buttonVoid"
            android:icon="@drawable/void_"
            android:title="Void"
            app:showAsAction="always"/>
        <item
            android:visible="false"
            android:id="@+id/buttonPreauth"
            android:icon="@drawable/preauth1"
            android:title="Preauth"
            app:showAsAction="always"/>
        <item
            android:id="@+id/buttonSaleComplete"
            android:icon="@drawable/sale_complete1"
            android:title="@string/sale_complete"
            app:showAsAction="always"/>
        <item
            android:visible="false"
            android:id="@+id/buttonRefund"
            android:icon="@drawable/cbwp1"
            android:title="Refund"
            app:showAsAction="always"/>
        <item
            android:visible="false"
            android:id="@+id/buttonPWCB"
            android:icon="@drawable/pwcb1"
            android:title="@string/PWCB"
            app:showAsAction="always"/>
        <item
            android:visible="false"
            android:id="@+id/buttonCash"
            android:icon="@drawable/cash1"
            android:title="@string/cash"
            app:showAsAction="always"/>
        <item
            android:visible="false"
            android:id="@+id/buttonCheque"
            android:icon="@drawable/cheque1"
            android:title="@string/chequE"
            app:showAsAction="always"/>
    </group>
</menu>